# volvoxgrid

./: .dockerignore  .firebaserc  .gitignore  ARCHITECTURE.md  BARCODE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.all  Dockerfile.android  Dockerfile.desktop  Dockerfile.ios  Dockerfile.web  GUI.md  IME.md  KEYS.md  LICENSE  Makefile  Package.swift  README.md  TODO.md  TUI.md  firebase.json
.cargo/: config.toml
adapters/aggrid/: package.json  run_compare_ui.sh
adapters/excel/: index.html  package.json  run_compare_ui.sh  vite.config.ts
adapters/report/: index.html  package.json  report.yaml  tsconfig.json  vite.config.ts
adapters/sfdatagrid/: pubspec.yaml  run_capture_linux_compare.sh  run_compare_ui.sh
adapters/sheet/: index.html  package.json  run_compare_ui.sh  tsconfig.build.json  tsconfig.json  vite.config.ts
adapters/vsflexgrid/: CMakeLists.txt  README.md
adapters/vsflexgrid/crate/: Cargo.toml
adapters/vsflexgrid/crate/src/: lib.rs  volvoxgrid_ffi_native.rs
adapters/vsflexgrid/example/: SalesGrid.vb6  SalesGrid.vba
adapters/vsflexgrid/include/: volvoxgrid_activex.h  volvoxgrid_activex_activex.h  volvoxgrid_activex_ffi_native.h  volvoxgrid_ffi_extra.h  volvoxgrid_ffi_native.h
adapters/vsflexgrid/mingw/: VolvoxGrid.def  VolvoxGrid_guids.h  activex_demo_host.c  bcryptprimitives.def  build_ocx.sh  compat_shims.c  dllexports.c  gdi_measure_text.c  generate_proxy_tracer.sh  grid_capture_test.c  grid_compare_test.c  grid_compare_ux_test.c  probe_bind_policy_fuzz.sh  probe_temporal_property_fuzz.sh  probe_width_formula_fuzz.sh  run_compare_data.sh  run_compare_ui.sh  run_compare_ux.sh  run_demo.sh  setup_mdac28.sh  stub_bcryptprimitives.c  stub_synch.c  volvoxgrid_ocx.c  wine_stubs.c  xp_compat.c
adapters/vsflexgrid/mingw/tests/: 01_default.vbs  02_colors.vbs  04_gridlines.vbs  06_selection_col.vbs  07_focus_rect.vbs  08_col_alignment.vbs  09_col_widths.vbs  100_sql_refresh.vbs  101_sql_unbind.vbs  102_sql_rebind.vbs  103_sql_error_handling.vbs  104_interaction_props.vbs  105_compat_style_props.vbs  18_hidden.vbs  23_range_selection.vbs  24_gridlines_inset.vbs  25_gridlines_horz.vbs  26_gridlines_vert.vbs  32_scrolled.vbs  36_unicode.vbs  37_multi_hierarchy.vbs  40_cell_flood_colors.vbs  41_cell_checked_states.vbs  42_clear_repopulate.vbs  43_redraw_batch.vbs  44_merge_row.vbs  46_erp_ledger.vbs  48_scroll_bars_none.vbs  50_wide_report.vbs  51_many_hidden_cols.vbs  52_subtotal_sum.vbs  54_three_level_subtotal.vbs  55_allow_big_selection.vbs  56_frozen_merge.vbs  58_cell_range_copy.vbs  63_colformat_editmask.vbs  65_event_edit_hooks.vbs  69_ado_clone_bind.vbs  70_ado_filter_refresh.vbs  71_ado_null_display.vbs  (+20 more)
adapters/vsflexgrid/mingw/tests_data/: 66_datasource_bind.vbs  67_data_roundtrip_refresh.vbs  72_ado_source_swap.vbs  74_ado_move_cursor_ops.vbs  75_ado_absoluteposition_ops.vbs  77_ado_bookmark_ops.vbs  79_ado_bound_batch_edit.vbs  README.md
adapters/vsflexgrid/mingw/tests_uiux/: 02_colors.vbs  03_alternate_rows.vbs  05_selection_row.vbs  10_row_heights.vbs  11_merge_cells.vbs  12_word_wrap.vbs  13_frozen.vbs  14_sort.vbs  15_subtotals.vbs  16_checkboxes.vbs  17_cell_flood.vbs  19_fixed_alignment.vbs  20_ellipsis.vbs  21_extend_last_col.vbs  22_additem.vbs  25_gridlines_horz.vbs  26_gridlines_vert.vbs  27_outline_styles.vbs  28_subtotal_above.vbs  29_selection_listbox.vbs  30_fill_style.vbs  31_large_grid.vbs  33_no_gridlines.vbs  34_focus_rect_inset.vbs  35_multi_fixed.vbs  38_autosize.vbs  39_removeitem.vbs  45_sort_descending.vbs  47_merge_both.vbs  49_outline_collapse.vbs  53_sort_then_merge.vbs  57_mixed_alignment.vbs  59_row_state_marks.vbs  60_col_combo_lists.ux  60_col_combo_lists.vbs  61_sort_findrow_toprow.vbs  62_fixedrow_bold_esscols.vbs  64_visible_row_recovery.vbs  65_event_edit_hooks.ux  65_event_edit_hooks.vbs  (+35 more)
adapters/vsflexgrid/proto/: activex.proto  volvoxgrid_activex.proto
adapters/vsflexgrid/src/: ADOAdapter.cpp  VolvoxGrid.def  VolvoxGrid.idl  VolvoxGridCtrl.cpp  VolvoxGridCtrl.h  VolvoxGridCtrl.rgs  dllmain.cpp  resource.h
adapters/vsflexgrid/src/idl_stubs/: oaidl.idl  ocidl.idl  unknwn.idl  wtypes.idl
adapters/xtragrid/: README.md  (+2 more)
android/: README.md  build.gradle.kts  settings.gradle.kts
android/volvoxgrid-android/src/main/jni/: CMakeLists.txt  native_window_helper.c  text_renderer_bridge.c
android/volvoxgrid-android/src/main/jni/synurang/: CMakeLists.txt  synurang_jni.c
docker/: README.md  build_all.sh  build_android_aar.sh  build_desktop_jar.sh  build_ios.sh  build_release_inside.sh  build_web.sh  zig-cc-wrapper.sh
dotnet/: Directory.Build.props  README.md  VolvoxGrid.DotNet.sln  build_dotnet.sh  run_sample.sh
engine/: Cargo.toml  build.rs
engine/examples/: rayon_bench.rs
engine/src/: animation.rs  canvas.rs  canvas_cpu.rs  canvas_gpu.rs  canvas_tui.rs  cell.rs  clipboard.rs  column.rs  compose.rs  config.rs  control.rs  debug_font.rs  demo.rs  drag.rs  edit.rs  event.rs  font_fallbacks.rs  glyph_atlas.rs  glyph_rasterizer.rs  gpu_render.rs  grid.rs  indicator.rs  input.rs  layout.rs  lib.rs  load.rs  merge_registry.rs  outline.rs  print.rs  render.rs  row.rs  save.rs  scroll.rs  scroll_cache.rs  scrollbar.rs  search.rs  selection.rs  sort.rs  span.rs  style.rs  (+1 more)
engine/src/compose/: deadkey.rs  hangul.rs  telex.rs
engine/src/shaders/: rect.wgsl  textured.wgsl
engine/tests/: pixel_regression.rs
flutter/: CHANGELOG.md  README.md  analysis_options.yaml  ffigen.yaml  pubspec.yaml
go/: README.md  go.mod  go.sum
gtk-test/: Cargo.toml  build.rs
gtk-test/src/: ffi.rs  main.rs
java/: README.md
plugin/: Cargo.toml  build.rs
plugin/src/: lib.rs  terminal_tui.rs  volvoxgrid_ffi_plugin.rs  windows_mingw_compat.c
proto/: volvoxgrid.proto
public/: index.html
scripts/: adb_capture.sh  adb_swipe.sh  docker_build_release.sh  run_headless_bench_matrix.sh  verify_embedded_version.sh
smoke-test/: Cargo.toml
smoke-test/src/: main.rs
testdata/: barcodes.json  hierarchy.json  sales.json
web/crate/: Cargo.toml
web/crate/src/: lib.rs  volvoxgrid_wasm.rs
(+407 files in other folders)
