[package]
name = "volvoxgrid-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["cosmic-text", "rayon", "regex"]
proto = []
grpc = ["proto"]
cosmic-text = ["dep:cosmic-text"]
rayon = ["dep:rayon"]
regex = ["dep:regex"]
demo = []
gpu = ["dep:wgpu", "dep:bytemuck", "dep:web-sys", "dep:raw-window-handle", "cosmic-text"]

[dependencies]
hashbrown = "0.16"
prost = "0.12"
prost-types = "0.12"
tiny-skia = "0.11"
qrcodegen = "1.8"
barcoders = "2"
cosmic-text = { version = "0.12", optional = true }
regex = { version = "1.10", optional = true }
rayon = { version = "1.10", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
flate2 = "1"
unicode-width = "0.2"
wgpu = { version = "24", optional = true }
bytemuck = { version = "1", features = ["derive"], optional = true }
raw-window-handle = { version = "0.6", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", optional = true, features = ["HtmlCanvasElement"] }
web-time = "1"

[build-dependencies]
prost-build = "0.12"
flate2 = "1"

[dev-dependencies]
pollster = "0.4"
