[package]
name = "volvoxgrid-gtk-test"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "volvoxgrid-gtk-test"
path = "src/main.rs"

[features]
default = []
gpu = ["volvoxgrid-engine/gpu", "dep:pollster"]

[dependencies]
volvoxgrid-engine = { path = "../engine", features = ["demo"] }
gtk4 = "0.8"
cairo = { version = "0.19", package = "cairo-rs", features = ["v1_16"] }
pollster = { version = "0.4", optional = true }
