[package]
name = "volvoxgrid-gtk-test"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "volvoxgrid-gtk-test"
path = "src/main.rs"

[features]
default = []
gpu = []

[dependencies]
gtk4 = "0.8"
cairo = { version = "0.19", package = "cairo-rs", features = ["v1_16"] }
prost = "0.12"
libc = "0.2"

[build-dependencies]
prost-build = "0.12"
