[package]
name = "volvoxgrid-plugin"
version = "0.1.2"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/ivere27/volvoxgrid"

[lib]
crate-type = ["cdylib", "staticlib"]

[features]
default = ["standard", "demo"]
standard = [
    "volvoxgrid-engine/cosmic-text",
    "volvoxgrid-engine/rayon",
    "volvoxgrid-engine/regex",
]
demo = ["volvoxgrid-engine/demo"]
gpu = ["volvoxgrid-engine/gpu", "dep:pollster", "dep:wgpu"]

[dependencies]
prost = "0.12"
volvoxgrid-engine = { path = "../engine", default-features = false, features = ["grpc"] }
ctor = "0.2"
lazy_static = "1.5"
pollster = { version = "0.4", optional = true }
wgpu = { version = "24", optional = true }

[profile.release]
lto = true
strip = true
opt-level = "z"
codegen-units = 1
