[package]
name = "volvoxgrid-plugin"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "staticlib"]

[features]
default = ["standard", "demo"]
standard = [
    "volvoxgrid-engine/cosmic-text",
    "volvoxgrid-engine/rayon",
    "volvoxgrid-engine/regex",
]
demo = ["volvoxgrid-engine/demo"]
gpu = ["volvoxgrid-engine/gpu", "dep:pollster", "dep:wgpu"]

[dependencies]
prost = "0.12"
volvoxgrid-engine = { path = "../engine", default-features = false, features = ["grpc"] }
ctor = "0.2"
lazy_static = "1.5"
pollster = { version = "0.4", optional = true }
wgpu = { version = "24", optional = true }
