[package]
name = "volvoxgrid-smoke"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
gpu = ["volvoxgrid-engine/gpu"]

[dependencies]
synurang-host = { git = "https://github.com/ivere27/synurang", tag = "v0.5.0", package = "synurang-host" }
prost = "0.12"
volvoxgrid-engine = { path = "../engine", features = ["grpc"] }
