[package]
name = "volvoxgrid-activex"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/ivere27/volvoxgrid"

[lib]
crate-type = ["staticlib"]

[features]
default = ["demo", "rayon", "regex"]
demo = ["volvoxgrid-engine/demo"]
rayon = ["volvoxgrid-engine/rayon"]
regex = ["volvoxgrid-engine/regex"]
gpu = ["volvoxgrid-engine/gpu"]
lite = []

[dependencies]
prost = "0.12"
volvoxgrid-engine = { path = "../../../engine", default-features = false, features = ["proto"] }
lazy_static = "1.5"

[profile.release]
lto = true
strip = true
opt-level = "z"
codegen-units = 1
panic = "abort"
