[package]
name = "volvoxgrid-activex"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["staticlib"]

[features]
default = ["demo", "rayon", "regex"]
demo = ["volvoxgrid-engine/demo"]
rayon = ["volvoxgrid-engine/rayon"]
regex = ["volvoxgrid-engine/regex"]
gpu = ["volvoxgrid-engine/gpu"]
lite = []

[dependencies]
prost = "0.12"
volvoxgrid-engine = { path = "../../../engine", default-features = false, features = ["proto"] }
lazy_static = "1.5"
